INIT adding Stripe. Little clean up, little docs re-arrangement.

--- a/.env.dist
+++ b/.env.dist
@@ -27,5 +27,9 @@ AWS_PEM_KEY_PAIR="" # Filename only, not extension
 AWS_S3_MEDIA_SOURCE_BUCKET=""
 AWS_S3_MEDIA_DISPLAY_BUCKET=""
 
-# MISC
+# Stripe
+STRIPE_PK=""
+STRIPE_SK=""
+
+# Misc
 CONTACT_EMAIL=""
