FIXED Cannot render console from 172.X.Y.Z! Allowed networks: 172.0.0.0/172.0.0.255, 127.0.0.0/127.255.255.255, ::1 error. Using env  var :D.

--- a/.env.dist
+++ b/.env.dist
@@ -2,6 +2,7 @@
 
 APP_ENV=""
 APP_NAME=""
+APP_VERSION=""
 
 # Google services credentials
 GOOGLEANALYTICS="UA-000000000-1"
@@ -29,3 +30,4 @@ AWS_S3_MEDIA_DISPLAY_BUCKET=""
 
 # MISC
 CONTACT_EMAIL=""
+DEV_NETWORK_CIDR=""
