--- a/terraform/web_app/web_app.yml
+++ b/terraform/web_app/web_app.yml
@@ -18,8 +18,19 @@
 
     - name: Installing awscli, https transport, build-essential, Python & PIP
       raw: sudo apt-get install -y awscli apt-transport-https build-essential python-minimal python-setuptools python-pip software-properties-common
-
+    
   tasks:
+    # source: https://linuxize.com/post/how-to-add-swap-space-on-ubuntu-18-04/
+    - name: Add swap disk to instance
+      command: >
+        swapon --show
+        dd if=/dev/zero of=/swapfile bs=1024 count=1048576
+        chmod 600 /swapfile
+        mkswap /swapfile
+        swapon /swapfile
+        swapon --show
+        free -h
+
     - name: Install system dependencies
       apt:
         pkg:
