--- a/terraform/web_app/web_app.yml
+++ b/terraform/web_app/web_app.yml
@@ -18,11 +18,11 @@
 
     - name: Installing awscli, https transport, build-essential, Python & PIP
       raw: sudo apt-get install -y awscli apt-transport-https build-essential python-minimal python-setuptools python-pip software-properties-common
-
+    
   tasks:
     # source: https://linuxize.com/post/how-to-add-swap-space-on-ubuntu-18-04/
     - name: Add swap disk to instance
-      shell: |
+      command: >
         swapon --show
         dd if=/dev/zero of=/swapfile bs=1024 count=1048576
         chmod 600 /swapfile
@@ -192,7 +192,7 @@
 
     - name: iptables rules
       shell: |
-        iptables -A PREROUTING -t nat -i eth0 -p tcp --dport 443 -j REDIRECT --to-port 3000
+        iptables -A PREROUTING -t nat -i eth0 -p tcp --dport 80 -j REDIRECT --to-port 3000
         iptables-save > ~/iptables.conf
         iptables-restore < ~/iptables.conf
 
