--- a/terraform/web_app/web_app.yml
+++ b/terraform/web_app/web_app.yml
@@ -36,6 +36,7 @@
         pkg:
           - git
           - curl
+          - imagemagick
           - libcurl4-openssl-dev
           - libffi-dev
           - libreadline6-dev
