--- a/.env.dist
+++ b/.env.dist
@@ -14,8 +14,7 @@ DB_USER=""
 DB_PASS=""
 
 DB_TST_SCHE=""
-DB_DEV_SCHE=""
-DB_PRD_SCHE=""
+DB_SCHE=""
 
 # cookie secret key
 COOKIE_SECRET_KEY_BASE=""
