Adding aLB configuration. Re-orged TF web_app.ec2 related resources into sub configuration files.

--- a/.env.dist
+++ b/.env.dist
@@ -1,8 +1,7 @@
 # encapsulate strings in double quotes
 
-APP_ENV=""
-APP_NAME=""
-APP_VERSION=""
+APP_ENV="" # alphanumeric, lowercase
+APP_NAME="" # alphanumeric, lowercase
 
 # Google services credentials
 GOOGLEANALYTICS="UA-000000000-1"
@@ -33,4 +32,4 @@ STRIPE_SK=""
 
 # Misc
 CONTACT_EMAIL=""
-DEV_NETWORK_CIDR=""
+DEV_NETWORK_CIDR="" #CIDR notation
