UPDATED post submit button text. REPLACE 'my' wording with much more graciouse 'your' wording.

--- a/docker/mariadb/my.cnf
+++ b/docker/mariadb/my.cnf
@@ -5,7 +5,7 @@ socket		            = /var/run/mysqld/mysqld.sock
 # Where the database files are stored inside the container
 datadir		            = /var/lib/mysql
 
-# My application special configuration
+# Your application special configuration
 max_allowed_packet = 32
 sql-mode                        = 'STRICT_TRANS_TABLES,NO_ENGINE_SUBSTITUTION'
 
