local DB upgrade to match PRD SQL service version.

--- a/docker/mariadb/Dockerfile
+++ b/docker/mariadb/Dockerfile
@@ -1,5 +1,5 @@
-FROM mariadb:5.5.62-trusty
+FROM mariadb:10.3.15-bionic
 LABEL author="David J Eddy <me@davidjeddy.com>"
 
 # Setup the custom configuration
-ADD ./docker/mariadb/my.cnf /etc/mysql/my.cnf
+# ADD ./docker/mariadb/my.cnf /etc/mysql/my.cnf
