Load Balancer creates. Now need target groups.

--- a/terraform/web_app/web_app.yml
+++ b/terraform/web_app/web_app.yml
@@ -34,8 +34,9 @@
     - name: Install system dependencies
       apt:
         pkg:
-          - git
           - curl
+          - git
+          - htop
           - imagemagick
           - libcurl4-openssl-dev
           - libffi-dev
