FIXED config error when using DB in dev.

--- a/config/database.yml
+++ b/config/database.yml
@@ -15,6 +15,10 @@ test:
   <<: *default
   database: <%= ENV['DB_TST_SCHE'] %>
 
+development:
+  <<: *default
+  database: <%= ENV['DB_SCHE'] %>
+
 production:
   <<: *default
   database: <%= ENV['DB_SCHE'] %>
