REMOVED http as avalid communication protocol. Trying to get Load Balancer routing working again.

--- a/docker/rubyonrails/Dockerfile
+++ b/docker/rubyonrails/Dockerfile
@@ -23,4 +23,4 @@ RUN bundle config --delete bin && rake rails:update:bin
 
 # EXPOSE 3000
 # ENTRYPOINT ["rails", "server", "--binding", "0.0.0.0"]
-ENTRYPOINT ["bundle", "exec", "puma", "--bind", "tcp://0.0.0.0:3000"]
+ENTRYPOINT ["bundle", "exec", "puma", "--bind", "tcp://0.0.0.0:3000", "--daemon"]
