--- a/terraform/web_app/web_app.yml
+++ b/terraform/web_app/web_app.yml
@@ -5,6 +5,7 @@
     APP_NAME: APP_NAME
     AWS_REGION: AWS_REGION
     database_address: database_address
+    local_group: ubuntu
     local_user: ubuntu
     media_display_bucket_id: media_display_bucket_id
     media_source_bucket_id: media_source_bucket_id
@@ -132,6 +133,8 @@
           - libmysqlclient-dev
         state: present
 
+  # GiT config
+
     - git_config:
         name: credential.helper
         value: '!aws codecommit credential-helper $@'
@@ -153,7 +156,8 @@
 
     - name: Install bunbler and gems
       shell: |
-        cd /home/{{ local_user }}/{{ APP_NAME }} && gem install bundler -v 1.3.5 && ./bin/bundle install
+        cd /home/{{ local_user }}/{{ APP_NAME }}
+        sudo gem install bundler -v 1.3.5 && sudo ./bin/bundle install
         # source https://philna.sh/blog/2017/06/12/speed-up-bundle-install-with-this-one-trick/
         # after v 1.4.0: --jobs=5
 
@@ -170,17 +174,17 @@
     - name: Change ownership of web app dir
       file:
         path: /home/{{ local_user }}/{{ APP_NAME }}
-        group: ubuntu
-        owner: ubuntu
+        group: {{ local_group }}
+        owner: {{ local_user }}
         recurse: true
 
     - name: Setup database
-      become: ubuntu
+      become: {{ local_user }}
       shell: |
         cd /home/{{ local_user }}/{{ APP_NAME }} && ./bin/rake db:setup
 
     - name: Migrate database
-      become: ubuntu
+      become: {{ local_user }}
       shell: |
         cd /home/{{ local_user }}/{{ APP_NAME }} && ./bin/rake db:migrate
 
@@ -188,9 +192,9 @@
       shell: |
         pkill ruby
         cd /home/{{ local_user }}/{{ APP_NAME }}
-        rails server -d --binding 0.0.0.0 --port 3000
+        bundle exec puma --bind tcp://0.0.0.0:3000 --daemon
 
-    # Redirect requests from port 80 to 3000 (Ruby on Rails default server port)
+    # Redirect requests from port 80 (web) to 3000 (Ruby Puma server)
 
     - name: iptables rules
       shell: |
