--- a/terraform/web_app/web_app.yml
+++ b/terraform/web_app/web_app.yml
@@ -204,6 +204,7 @@
       shell: |
         aws s3 cp s3://connechub-configs/{{ APP_ENV }}/.passwd-s3fs /home/{{ local_user }}/.passwd-s3fs
         chmod 0600 /home/{{ local_user }}/.passwd-s3fs     
+        chown {{ local_user}}:{{ local_user}} /home/{{ local_user }}/.passwd-s3fs     
 
     # Configure fusermount to enable 'allow_other' s3fs mounting
     # TODO: Consider using the replace, lineinfile or template module rather than running sed.
@@ -234,7 +235,7 @@
           {{ media_source_bucket_id }} \
           /home/{{ local_user }}/media-source-{{ APP_ENV }} \
           -o endpoint={{ AWS_REGION }} \
-          -o use_cache=/tmp \
+          -o use_cache=/home/ubuntu \
           -o multireq_max=5 \
           -o passwd_file=/home/{{ local_user }}/.passwd-s3fs  \
           -o url=https://s3.{{ AWS_REGION }}.amazonaws.com \
@@ -265,7 +266,7 @@
           {{ media_display_bucket_id }} \
           /home/{{ local_user }}/{{ APP_NAME }}/public/system \
           -o endpoint={{ AWS_REGION }} \
-          -o use_cache=/tmp \
+          -o use_cache=/home/ubuntu \
           -o multireq_max=5 \
           -o passwd_file=/home/{{ local_user }}/.passwd-s3fs  \
           -o url=https://s3.{{ AWS_REGION }}.amazonaws.com \
