--- a/terraform/web_app/web_app.yml
+++ b/terraform/web_app/web_app.yml
@@ -157,7 +157,10 @@
     - name: Install bunbler and gems
       shell: |
         cd /home/{{ local_user }}/{{ APP_NAME }}
-        sudo gem install bundler -v 1.3.5 && sudo ./bin/bundle install
+        gem install bundler -v 1.3.5
+        # source https://bundler.io/man/bundle-binstubs.1.html
+        bundle --binstubs
+        bundle install
         # source https://philna.sh/blog/2017/06/12/speed-up-bundle-install-with-this-one-trick/
         # after v 1.4.0: --jobs=5
 
