FIXES for Docker startup locally. ADDED CSs/JS/HTML as needed for loading spinner on Listings post action.

--- a/docker/rubyonrails/Dockerfile
+++ b/docker/rubyonrails/Dockerfile
@@ -19,7 +19,9 @@ COPY ./ /app
 RUN chmod 0600 /app/.passwd-s3fs
 
 # DB install and migrations
-RUN bundle config --delete bin && rake rails:update:bin
+RUN gem install bundler -v 1.3.5
+RUN bundle --binstubs
+RUN bundle install
 
 EXPOSE 9293
 
