Attempting to get emailworking once more

--- a/.env.dist
+++ b/.env.dist
@@ -25,6 +25,8 @@ AWS_SECRET_KEY=""
 AWS_PEM_KEY_PAIR="" # Filename only, not extension
 AWS_S3_MEDIA_SOURCE_BUCKET=""
 AWS_S3_MEDIA_DISPLAY_BUCKET=""
+AWS_SMTP_USER=""
+AWS_SMTP_PASSWORD=""
 
 # Stripe
 STRIPE_PK=""
