FIXED email sending. Currently using AWS SES in sandbox mode. ADDED Cypress UAT test to ensure resulting page loads. MOVED Geocoder API key out of ./config/init.../geocoder.rv and into .env file.

--- a/.env.dist
+++ b/.env.dist
@@ -2,6 +2,7 @@
 
 APP_ENV="" # alphanumeric, lowercase
 APP_NAME="" # alphanumeric, lowercase
+APP_HOST="" # FQDN or IP:PORT
 
 # Google services credentials
 GOOGLEANALYTICS="UA-000000000-1"
@@ -19,14 +20,11 @@ DB_SCHE=""
 COOKIE_SECRET_KEY_BASE=""
 
 # AWS API credentials
-AWS_REGION=""
-AWS_ACCESS_KEY=""
-AWS_SECRET_KEY=""
-AWS_PEM_KEY_PAIR="" # Filename only, not extension
-AWS_S3_MEDIA_SOURCE_BUCKET=""
-AWS_S3_MEDIA_DISPLAY_BUCKET=""
-AWS_SMTP_USER=""
-AWS_SMTP_PASSWORD=""
+SES_SMTP_ADDRESS=""
+SES_SMTP_PORT=""
+SES_SMTP_USERNAME=""
+SES_SMTP_PASSWORD=""
+SES_SMTP_SENDER=""
 
 # Stripe
 STRIPE_PK=""
@@ -35,3 +33,6 @@ STRIPE_SK=""
 # Misc
 CONTACT_EMAIL=""
 DEV_NETWORK_CIDR="" #CIDR notation
+
+# Geocoder
+GEOCODE_API_KEY=""
