--- a/.env.dist
+++ b/.env.dist
@@ -5,34 +5,42 @@ APP_NAME="" # alphanumeric, lowercase
 APP_HOST="" # FQDN or IP:PORT
 
 # Google services credentials
-GOOGLEANALYTICS="UA-000000000-1"
+GOOGLEANALYTICS="" # string
 
 # Database connection
-DB_HOST=""
-DB_PORT=""
-DB_USER=""
-DB_PASS=""
+DB_HOST="" # FQDN
+DB_PORT="" # integer
+DB_USER="" # string
+DB_PASS="" # string
 
 DB_TST_SCHE=""
-DB_SCHE=""
+DB_SCHE="" # string
 
 # cookie secret key
-COOKIE_SECRET_KEY_BASE=""
+COOKIE_SECRET_KEY_BASE="" # string
 
 # AWS API credentials
-SES_SMTP_ADDRESS=""
-SES_SMTP_PORT=""
-SES_SMTP_USERNAME=""
-SES_SMTP_PASSWORD=""
-SES_SMTP_SENDER=""
+AWS_REGION="" # string
+AWS_ACCESS_KEY="" # string
+AWS_SECRET_KEY="" # string
+AWS_PEM_KEY_PAIR="" # string
+AWS_S3_MEDIA_DISPLAY_BUCKET="" # string
+AWS_S3_MEDIA_SOURCE_BUCKET="" # string
+
+# Action mailer credentials
+SES_SMTP_ADDRESS="" # string
+SES_SMTP_PORT="" # integer
+SES_SMTP_USERNAME="" # string
+SES_SMTP_PASSWORD="" # string
+SES_SMTP_SENDER="" # string
 
 # Stripe
-STRIPE_PK=""
-STRIPE_SK=""
+STRIPE_PK="" # string
+STRIPE_SK="" # string
 
-# Misc
-CONTACT_EMAIL=""
-DEV_NETWORK_CIDR="" #CIDR notation
+# MISC
+CONTACT_EMAIL="" # string
+DEV_NETWORK_CIDR="" # CIDR address
 
-# Geocoder
-GEOCODE_API_KEY=""
+# GeoCode
+GEOCODE_API_KEY="" # string
