UPDATED .env.dist and TF README.md

--- a/.env.dist
+++ b/.env.dist
@@ -13,7 +13,7 @@ DB_PORT="" # integer
 DB_USER="" # string
 DB_PASS="" # string
 
-DB_TST_SCHE=""
+DB_TST_SCHE="" # string
 DB_SCHE="" # string
 
 # cookie secret key
