--- a/terraform/web_app/web_app.yml
+++ b/terraform/web_app/web_app.yml
@@ -14,11 +14,8 @@
   gather_facts: false
 
   pre_tasks:
-    - name: system prep
-      raw: export DEBIAN_FRONTEND=noninteractive && dpkg --configure -a
-
     - name: Update dependencies via apt-get
-      raw: apt-get clean -y && apt-get autoclean -y && apt autoremove -yq && apt-get update -yq && apt-get upgrade -yq
+      raw: export DEBIAN_FRONTEND=noninteractive && dpkg --configure -a && apt-get clean -y && apt-get autoclean -y && apt autoremove -yq && apt-get update -yq && apt-get upgrade -yq
 
     - name: Install CLI tools
       raw: apt-get install -y awscli apt-transport-https build-essential python-minimal python-setuptools python-pip software-properties-common
