ADDED migration to set values for sub_categories that will require payment.

--- a/.gitignore
+++ b/.gitignore
@@ -58,8 +58,9 @@ bower.json
 *.tfstate.*
 *.plan
 
-# ignore archive files
+# ignore archive and generated files
 **/*.zip
 **/*.rar
 **.*gz
 .passwd*
+/bin
